# calculatorqtcpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: mainwindow.cpp  mainwindow.h  maths.cpp  maths.h
